--- a/themes/climatestrike/scss/partials/components/_body.scss
+++ b/themes/climatestrike/scss/partials/components/_body.scss
@@ -20,5 +20,9 @@ body {
         width: 100%;
         margin: 0;
         padding: 0;
+
+        min-height: 300px;
+
+        margin-bottom: 2em;
     }
 }
