--- a/themes/climatestrike/scss/partials/components/_post.scss
+++ b/themes/climatestrike/scss/partials/components/_post.scss
@@ -14,23 +14,27 @@
 .post-type-ecr_event {
     display: flex;
     flex-direction: row;
-    flex-wrap: wrap;
-
-    padding: 2em;
+    
+    margin-left: 2em;
+    margin-right: 2em;
 
     .events-list {
         width: 25%;
-        @include respond(max-width, 800px) {
+        @include respond(max-width, $widths-widescreen) {
             width: 100%;
         }
 
         .tease-event {
             width: 100%;
+
+            @include respond(max-width, $widths-widescreen) {
+                width: 30%;
+            }
         }
     }
 
-    @include respond(min-wdith, 800px) {
-        flex-wrap: nowrap;
+    @include respond(max-width, $widths-widescreen) {
+        flex-wrap: wrap;
     }
 }
 
@@ -56,9 +60,6 @@
 
     &__item_wrap {
         margin: 2em;
-        padding: 2em;
-
-        background-color: #f2f2f2;
 
         div {
             margin-bottom: 1em;
