--- a/themes/climatestrike/scss/partials/toolbox/_settings.scss
+++ b/themes/climatestrike/scss/partials/toolbox/_settings.scss
@@ -3,6 +3,7 @@
 $widths-small: 600px; // Portrait tablets and phones
 $widths-medium: 768px; // Landscape tablets
 $widths-large: 992px; // Desktops and laptops
+$widths-widescreen: 1280px; // Widescreen desktops
 
 $bp--menu-burger: $widths-medium;
 
